samples/_failures_safe/1761497316_d81b50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ee1d371.c:127:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  127 | int main
      | ^~~
